# fi-slurm-utils

./: .gitignore  .pre-commit-config.yaml  Cargo.toml  Dockerfile  MIGRATION.md  OpenCode.md  README.md  RELEASING.md  bindings.rs  build.rs  env.sh  nightly.sh  project.md  sample_bindings.rs  wrapper.h
.github/: Dockerfile
.github/workflows/: release.yml  rust.yml
.opencode/: opencode.db  opencode.db-shm  opencode.db-wal
carriero/: featureReport.py
fi-job-top/: Cargo.toml
fi-limits/: Cargo.toml  README.md
fi-limits/src/: limits.rs  main.rs
fi-node/: Cargo.toml  README.md  flamegraph.folded  perf.data
fi-node/src/: energy.rs  jobs.rs  limits.rs  main.rs  nodes.rs  parser.rs  report.rs  summary_report.rs  tree_report.rs  tui.rs  utils.rs
fi-node/src/tui/: REFACTOR.md  app.rs  interface.rs  mod.rs  ui.rs
fi-nodes/: Cargo.toml  README.md
fi-nodes/src/: main.rs  report.rs  summary_report.rs  tree_report.rs
fi-nodes/src/tui/: app.rs  interface.rs  mod.rs  ui.rs
fi-prometheus/: Cargo.toml  README.md
fi-prometheus/src/: lib.rs
fi-slurm/: API.md  Cargo.toml  README.md  build.rs
fi-slurm-bind/: Cargo.toml  README.md  build.rs
fi-slurm-bind/src/: lib.rs
fi-slurm-db/: Cargo.toml
fi-slurm-db/src/: acct.rs  db.rs  jobs.rs  lib.rs  qos.rs  utils.rs
fi-slurm-limits/: Cargo.toml  README.md
fi-slurm-limits/src/: limits.rs  main.rs
fi-slurm-sys/: Cargo.toml  README.md  build.rs  wrapper.h
fi-slurm/src/: cluster_state.rs  energy.rs  filter.rs  jobs.rs  lib.rs  nodes.rs  parser.rs  site.rs  states.rs  utils.rs
fi_prometheus/: Cargo.toml
fi_prometheus/src/: lib.rs
fi_slurm/: API.md  Cargo.toml  README.md
fi_slurm/src/: bindings.rs  cluster_state.rs  compound_filter.rs  energy.rs  filter.rs  gres.rs  jobs.rs  lib.rs  nodes.rs  parser.rs  prometheus.rs  states.rs  utils.rs
fi_slurm_db/: Cargo.toml  README.md  build.rs
fi_slurm_db/src/: acct.rs  db.rs  debug.md  jobs.rs  lib.rs  qos.rs  utils.rs
headers/: slurm.h
rust-bind/: Cargo.toml  README.md  build.rs  wrapper.h
rust-bind/src/: lib.rs
rust_bind/: Cargo.toml  README.md  build.rs  wrapper.h
rust_bind/src/: bindings.rs  energy.rs  gres.rs  jobs.rs  lib.rs  main.rs  nodes.rs  parser.rs  report.rs
src/: main.rs  wrapper.h
