[workspace]
resolver = "2"
members = [
    "fi-job-top",
    "fi-slurm-limits",
    "fi-nodes",
    "fi-prometheus",
    "fi-slurm-bind",
    "fi-slurm-db",
    "fi-slurm",
]
default-members = [
    "fi-slurm-limits",
    "fi-nodes",
]

[workspace.package]
version = "0.1.6"
edition = "2024"
license = "Apache-2.0"
