[workspace]
resolver = "2"
members = [
    "fi-job-top",
    "fi-slurm-limits",
    "fi-nodes",
    "fi-prometheus",
    "fi-slurm-sys",
    "fi-slurm-db",
    "fi-slurm",
]
default-members = [
    "fi-slurm-limits",
    "fi-nodes",
]

[workspace.package]
version = "0.2.0"
edition = "2024"
license = "Apache-2.0"
