[package]
name = "fi_node"
version = "0.1.0"
edition = "2024"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
fi_slurm = {path = "../fi_slurm"}
fi_prometheus = {path = "../fi_prometheus"}
colored = "3.0.0"
color-eyre = "0.6.5"
ratatui = "0.29.0"
chrono = "0.4.41"
crossterm = "0.29.0"
