[package]
name = "fi-nodes"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
fi-slurm = {path = "../fi-slurm"}
fi-slurm-db = {path = "../fi-slurm-db"}
fi-prometheus = {path = "../fi-prometheus"}
colored = "3.0.0"
color-eyre = "0.6.5"
ratatui = "0.29.0"
chrono = "0.4.41"
crossterm = "0.29.0"
tokio = { version = "1.46.1", features = ["rt-multi-thread", "macros", "sync"] }
thiserror = "2.0.12"
users = "0.11.0"
