[package]
name = "fi-nodes"
version = "0.1.0"
edition = "2024"
license = "Apache-2.0"

[features]
tui = [
    "dep:fi-prometheus",
    "dep:ratatui",
    "dep:crossterm",
    "dep:tokio",
    "dep:color-eyre",
]

[dependencies]
clap = { version = "4.5.40", features = ["derive"] }
fi-slurm = { path = "../fi-slurm" }
fi-slurm-db = { path = "../fi-slurm-db" }
fi-prometheus = { path = "../fi-prometheus", optional = true }
colored = "3.0.0"
color-eyre = { version = "0.6.5", optional = true }
ratatui = { version = "0.29.0", optional = true }
chrono = "0.4.41"
crossterm = { version = "0.29.0", optional = true }
tokio = { version = "1.46.1", features = [
    "rt-multi-thread",
    "macros",
    "sync",
], optional = true }
thiserror = "2.0.12"
users = "0.11.0"
