[package]
name = "fi_slurm"
version = "0.1.0"
edition = "2024"
build = "build.rs"

[dependencies]
bitflags = "2.9.1"
chrono = "0.4.41"
once_cell = "1.21.3"
regex = "1.11.1"
reqwest = { version = "0.12.20", features = ["blocking"] }
rust_bind = {path = "../rust_bind"}
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
