[package]
name = "rust_bind"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "0.4.41"
clap = { version = "4.5.40", features = ["derive"] }
libc = "0.2.172"
once_cell = "1.21.3"
regex = "1.11.1"

[build-dependencies]
bindgen = "0.72.0"
